--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bank
 spring.datasource.username= postgres
 spring.datasource.password= postgres
 
-spring.jpa.properties.hibernate.show_sql = true
+
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka
+eureka.instance.prefer-ip-address=true
